# Unlook-SDK

./: .gitignore  .readthedocs-requirements.txt  .readthedocs.yaml  ADVANCED_MULTI_FRAME_FUSION_IMPLEMENTATION_LOG.md  ADVANCED_STEREO_OPTIMIZATION_IMPLEMENTATION_SUMMARY.md  ADVANCED_STEREO_OPTIMIZATION_RESEARCH.md  ADVANCED_STEREO_RESEARCH_2024.md  ALL_FIXES_SUMMARY.md  ANALISI_COMPLETEZZA_IMPLEMENTAZIONE.md  BINARY_MESSAGE_FIX.md  CALIBRATION_AUTO_LOAD.md  CALIBRATION_FIX_SUMMARY.md  CALIBRATION_Q_MATRIX_FIX.md  CALIBRATION_V2_LED_FIXES.md  CALIBRAZIONE_POSIZIONI_STANDARD.md  CAMERA_IMPORT_FIX_SOLUTION.md  CAMERA_SYNC_IMPROVEMENTS.md  CERES_INSTALLATION_INSTRUCTIONS.md  CLAUDE_FIXES_SESSION_20250515.md  CLAUDE_NEXT_SESSION_NOTES.md  CLAUDE_SESSION_NOTES_20250518.md  CLAUDE_SESSION_NOTES_20250519.md  COMPLETE_4_STRATEGY_OBJECT_DETECTION_IMPLEMENTATION.md  COMPLETE_ADVANCED_STEREO_OPTIMIZATION_GUIDE.md  COMPLETE_DEMO_PREPARATION_PROMPT.txt  COMPLETE_FIXED_RECONSTRUCTION_COMMAND.md  COMPLETE_RECONSTRUCTION_COMMAND.md  CRITICAL_RECONSTRUCTION_ISSUES_ANALYSIS.md  CURRENT_STATUS.md  DEEP_LEARNING_IMPLEMENTATION_PLAN.md  DEEP_STEREO_RESEARCH_FINDINGS.md  DISPARITY_TRIANGULATION_FIX_SUMMARY.md  DOCUMENTATION_TOOLS.md  ELAS_INSTALLATION_INSTRUCTIONS.md  EMERGENCY_FIX_IMPLEMENTATION_PLAN.md  ENHANCED_DEMO_GUIDE.md  ENHANCED_PROCESSOR_DEFAULT.md  ENHANCED_PROCESSOR_USAGE.md  ENUM_FIXES_SUMMARY.md  FILES_TO_CLEAN.md  (+109 more)
_old/: .gitignore  client-requirements  pyptoject.toml  server-requirements.txt
_old/unlook/: __init__.py  unlook_server.py
calibration_2k_left_only/: calibration_info.json
docs/: NEW_STRUCTURE.md  README.md  README_DOCS.md  camera_configuration.md  gpu_acceleration.md  optimal_camera_spacing.md  pattern_sequences.md  requirements.txt  sdk_console_concept.md  test_rtd_build.sh
docs/source/: changelog.rst  conf.py  getting_started.rst  index.rst  installation.rst
installer/: README.md
scacchiera_demo/20250612_015815/: metadata.json
scacchiera_demo/20250612_020109/: metadata.json
scripts/: build_opencv_cuda.py  install_opencv_cuda.py
tests/: test_correspondence_analysis.py  test_debug_folders.py  test_decode_direct.py  test_decode_fix.py  test_depth_diagnostic.py  test_opencv_gui.py  test_scan_with_settings.py  test_static_scanner_decode.py
unlook/: __init__.py  server_boot.py  server_bootstrap.py  simple.py  unlook_config.json  unlook_config.json.example  unlook_server.py
unlook/calibration/: 2k_calibration_config.json  README.md
unlook/client/: README.md  __init__.py  _imports.py  advanced_structured_light.py  calibration.py  camera.py  camera_calibration.py  camera_config.py  enhanced_gray_code.py  exceptions.py  export.py  gpu_utils.py  logging_config.py  nn_mvs2d.py.disabled  nn_processing.py  open3d_utils.py  point_cloud_nn.py  projector.py  projector_adapter.py  real_time_scanner.py  realtime_scanner.py  robust_scan.py  robust_scanner.py  robust_structured_light.py  scan_config.py  scanner.py  scanner3d.py  single_camera_scanner.py  static_scanner.py  streaming.py  structured_light.py  visualization.py  visualization_utils.py
unlook/common/: __init__.py  discovery.py  protocol.py  utils.py
unlook/core/: README.md  __init__.py  constants.py  discovery.py  events.py  protocol.py  protocol_v2.py  utils.py
unlook/examples/: POSE_TRACKING_README.md  README.md  README_GPU_TESTING.md  README_VISUALIZATION.md  advanced_mesh_processing.py  advanced_patterns_example.py  analyze_debug_scan_with_iso_compliance.py  bodypose_demo_unlook.py  bodypose_demo_unlook_headless.py  calibration_and_scan.py  camera_calibration_example.py  camera_config_example.py  camera_configuration_demo.py  camera_test.py  (+59 more)
(+207 files in other folders)
